Facebook pauses video in PiP during scroll https://bugs.webkit.org/show_bug.cgi?id=220581 <rdar://67273166>

Reviewed by Eric Carlson.

Add a Quirk which blocks Facebook from pausing videos in Picture-in-Picture mode without that
pause() occurring during a User Gesture. This blocks Facebook from pausing a PiP'd video when
the <video> element hosting that video scrolls out of the viewport, without blocking Facebook's
own custom pause control from working correctly.

* html/MediaElementSession.cpp:
(WebCore::MediaElementSession::playbackPermitted const):
* page/Quirks.cpp:
(WebCore::Quirks::requiresUserGestureToPauseInPictureInPicture const):
* page/Quirks.h:


Canonical link: https://commits.webkit.org/233025@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271470 268f45cc-cd09-0410-ab3c-d52691b4dbfc